Prevent paired-endpoint uploaders from being too wide.
Long endpoint names break the layout without this.

--- a/agent/src/main/webapp/less/data-widget.less
+++ b/agent/src/main/webapp/less/data-widget.less
@@ -84,6 +84,10 @@
  }
 }
 
+#inventory-uploader-downstream, #inventory-uploader-upstream {
+  max-width: 50%;
+}
+
 #inventory-uploader-downstream {
   float: left;
 }
